<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="1920dp"
        android:layout_height="1080dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onClickPicture"
            android:text="@string/take_picture" />

        <Button
            android:id="@+id/btnStopRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStopRecord"
            android:text="@string/stop_record" />

        <Button
            android:id="@+id/btnStartRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStartRecord"
            android:text="@string/start_record" />
        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/button5" />

    </LinearLayout>



</RelativeLayout>
